--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <p>
                         I am an aspiring AI/ML Engineer with over 10 months of hands-on experience in developing and deploying 
                         intelligent systems. I hold a B.Tech in Computer Science and Engineering and am currently working as an 
-                        AI/ML Intern at PharynxAI, where I contribute to real-world applications involving Gen AI and computer vision.
+                        AI/ML Engineer at PharynxAI, where I contribute to real-world applications involving Gen AI and computer vision.
                     </p>
                     <p>
                         Passionate about responsible and impactful AI, I also serve as a Global Ambassador for the Responsible AI UAE 
