My latest changes

--- a/index.html
+++ b/index.html
@@ -342,6 +342,20 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
+                        <h3>EmailSynapse</h3>
+                        <p>Designed and developed an AI-powered email management assistant that enables professionals to automatically categorize, summarize, and schedule emails across Google services, streamlining inbox management and improving productivity through intelligent calendar integration.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Gmail</span>
+                            <span class="tech-tag">Google Calender</span>
+                            <span class="tech-tag">Google cloud Console</span>
+                            <span class="tech-tag">Gemini</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Streamlit</span>                       
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-content">
                         <h3>Cosmetic Ingredient Scanner</h3>
                         <p>Designed and developed an AI-powered cosmetic safety tool that scans product labels using OCR, extracts ingredients, and cross-references them with FDA (US) and Indian regulatory databases to identify banned or harmful substances, ensuring transparency and consumer safety</p>
                         <div class="project-tech">
