My latest changes

--- a/index.html
+++ b/index.html
@@ -583,8 +583,11 @@
                         <h4>DeepLearning.ai</h4>
                         <span class="certification-date">Issued Sept 2025</span>
                         <div class="certification-skills">
-                            <span class="skill-badge">Prompt Engineering</span>
+                            <span class="skill-badge">Systematic Prompt Engineering</span>
                             <span class="skill-badge">ChatGPT</span>
+                            <span class="skill-badge">Application Integration</span>
+                            <span class="skill-badge">Custom Chatbot Development</span>
+                            <span class="skill-badge">LLM API Integration</span>
                         </div>
                         <a href="https://learn.deeplearning.ai/accomplishments/8e5df41f-01da-47c2-af05-ce8083f3008b?usp=sharing" target="_blank" class="view-credential-btn">View Credentials</a>
                     </div>
